--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,22 +3,39 @@
 
 
 header {
-background-color: rgb(188, 85, 202);
-width: 100%;
-margin: 0;
-padding: 0;
-text-align: center;
+background-color: rgb(193, 57, 211);
+text-align: justify;
 }
 
 header h1 {
-    position:fixed;
-    left: 0rem;
+    position:absolute;
+    left: 1rem;
+    color:rgb(60, 57, 211)
 }
 
 header nav {
-    display: inline-block
-
+    display: inline-flex;
+    flex-direction: row;
+    float: right;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5rem;
+    text-align: end;
+    position: 0,0;
 }
+
+header nav ul {
+    list-style-type: none;
+}
+
+header nav ul li {
+    display: inline-block;
+}
+
+main {
+    position:fixed;
+    top: 7.5rem;
+}
+
 
 #About-Me {
     border: 150px;
