--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,9 @@
 }
 
 body {
-    background-image: linear-gradient(
-        rgba(63, 13, 65, 0.452) 0%,
-        rgba(236, 102, 229, 0.6) 100%
-    );
+    background-image: url(/assets/images/gotime.jpg);
+    background-position: center;
+    /* display:flex; */
 }
 
 header {
@@ -31,17 +30,34 @@ nav {
     padding: 20px 20px;
 }
 
+.abtPic {
+    border-radius: 12em;
+    position: relative;
+    left: 15em;
+    
+}
+
+#description {
+    color: rgb(255, 0, 234);
+}
+
 h2 {
     color:aqua;
 }
 
-#work {
+
+
+#work a{ 
+    color:blanchedalmond
+    
 }
 
 .card {
     max-width: 70vw;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-content: center;
     border: 2px solid black;
     margin: 10px 10px;
 }
@@ -49,12 +65,15 @@ h2 {
 .card2 {
     display: flex;
     flex-direction: column;
+    grid-column: 2 0 auto;
     border: 2px solid black;
     margin: 10px 10px;
 }
-
+.grid p {
+    align-content: center;
+}
 #card1 img {
-    max-width: 70vw;
+    max-width: 30vw;
     height: auto;
 }
 #card2 img {
@@ -62,7 +81,7 @@ h2 {
     height: auto;
 }
 #card3 img {
-    max-width: 30vw;
+    max-width: 20vw;
     height: auto;
 }
 #card4 img {
